changement archi dossiers

--- a/03-SOM/source.tex
+++ b/03-SOM/source.tex
@@ -1,6 +1,12 @@
-\part{Un nouveau modèle multi-cartes: CxSOM et ses méthodes d'analyse}
+
+\documentclass[../main]{subfiles}
+\ifSubfilesClassLoaded{
+    \dominitoc
+    \tableofcontentsfile
+}{}
+\begin{document}
 \chapter{Modèle d'architecture CxSOM}
-\graphicspath{{03-SOM/}}
+\graphicspath{{03-SOM/},{./}}
 \minitoc
 
 Nous proposons dans cette thèse un modèle d'architecture de cartes auto-organisatrices, CxSOM. Avec ces architectures, on cherchera à apprendre un modèle de relation entre des ensembles de données issues de plusieurs modalités. 
@@ -370,11 +376,11 @@ Ainsi, la mise à jour des poids d'une carte est indépendante à chaque couche,
 
 
 
-\draft{
-\subsection{Etape de test}
+% \draft{
+% \subsection{Etape de test}
 
-Afin d'étudier le dépliement des cartes, on effectue des itérations de \emph{test} pendant l'apprentissage. Ces étapes consistent à effectuer les étapes de présentation d'entrée, calcul d'activité et recherche du BMU par relaxation, mais pas l'étape de mise à jour des poids. Les poids des cartes restent donc figés pendant un ensemble de tests. Les entrées des cartes sont $\inpx\m{i}_t$, issues d'un ensemble de test, du même espace que les entrées servant à l'apprentissage.
-}
+% Afin d'étudier le dépliement des cartes, on effectue des itérations de \emph{test} pendant l'apprentissage. Ces étapes consistent à effectuer les étapes de présentation d'entrée, calcul d'activité et recherche du BMU par relaxation, mais pas l'étape de mise à jour des poids. Les poids des cartes restent donc figés pendant un ensemble de tests. Les entrées des cartes sont $\inpx\m{i}_t$, issues d'un ensemble de test, du même espace que les entrées servant à l'apprentissage.
+% }
 
 \draft{
 \subsection{Prédiction d'entrée}
@@ -421,20 +427,26 @@ Le modèle CxSOM permet de construire des architectures de carte auto-organisatr
 
 L'algorithme d'apprentissage a été conçu de façon large: nous avons développé un modèle général permettant d'associer des cartes. Les objectifs des chapitres suivants sont d'abord de montrer le comportement de l'algorithme et comment la relaxation permet de déterminer un BMU dans chaque carte. Nous étudierons ensuite en détail comment les données fournies en entrées à une architecture sont représentées dans les couches de poids. Nous verrons enfin une application d'une architecture de cartes dans un contexte de prédiction d'entrée.
 
-\draft{
-\Annexes
-\Annex{Glossaire des notations}
-\begin{itemize}
-\item $\inpx_t$ Entrée externe présentée à la carte à l'itération d'apprentissage $t$. $\inpx_t \in \mathcal{D}$
-\item $\inpc$ Entrée contextuelle d'une carte. Les entrées contextuelles sont les positions des BMUs $\bmu\m{i_k}$ d'autres cartes de l'architecture; on notera $\inpc_{i_k}$ l'entrée contextuelle liée à la carte $i_k$.
-\item $p$ indexation des n\oe{}uds carte, $p \in [0,1]$ ou $[0,1]^2$.
-\item $\w\ext(p)$ Poids externes. $\w\ext \in \mathcal{D}$
-\item $\w_{ck}(p)$ Couche de poids contextuels d'une carte liés à l'entrée $\inpc_{i_k}$. $\w_{ck}(p) \in [0,1]$ ou $[0,1]^2$.
-\item $a_e(\inpx_t,p)$ Activité externe 
-\item $a_{ck}(\inpc_{i_k},p)$ Activité contextuelle calculée sur la couche de poids $w_{ck}$
-\item $a_c(\Gamma,p)$ Moyenne des couches activités contextuelles
-\item $a_g(\inpx_t,\Gamma,p)$ Activité globale, combinaison des activités externes et contextuelles
-\item $\bmu_\tau$ Positions intermédiaires des BMUs d'une carte pendant la relaxation
-\item $\bmu_t$ Position finale du BMU d'une carte après relaxation
-\end{itemize}
-}
+% \draft{
+% \Annexes
+% \Annex{Glossaire des notations}
+% \begin{itemize}
+% \item $\inpx_t$ Entrée externe présentée à la carte à l'itération d'apprentissage $t$. $\inpx_t \in \mathcal{D}$
+% \item $\inpc$ Entrée contextuelle d'une carte. Les entrées contextuelles sont les positions des BMUs $\bmu\m{i_k}$ d'autres cartes de l'architecture; on notera $\inpc_{i_k}$ l'entrée contextuelle liée à la carte $i_k$.
+% \item $p$ indexation des n\oe{}uds carte, $p \in [0,1]$ ou $[0,1]^2$.
+% \item $\w\ext(p)$ Poids externes. $\w\ext \in \mathcal{D}$
+% \item $\w_{ck}(p)$ Couche de poids contextuels d'une carte liés à l'entrée $\inpc_{i_k}$. $\w_{ck}(p) \in [0,1]$ ou $[0,1]^2$.
+% \item $a_e(\inpx_t,p)$ Activité externe 
+% \item $a_{ck}(\inpc_{i_k},p)$ Activité contextuelle calculée sur la couche de poids $w_{ck}$
+% \item $a_c(\Gamma,p)$ Moyenne des couches activités contextuelles
+% \item $a_g(\inpx_t,\Gamma,p)$ Activité globale, combinaison des activités externes et contextuelles
+% \item $\bmu_\tau$ Positions intermédiaires des BMUs d'une carte pendant la relaxation
+% \item $\bmu_t$ Position finale du BMU d'une carte après relaxation
+% \end{itemize}
+% }
+
+\ifSubfilesClassLoaded{
+    \printbibliography
+    %\externaldocument{../main.tex}   
+}{}
+\end{document}
