--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1186,3 +1186,32 @@
 	month = feb,
 	year = {2014}
 }
+
+
+@techreport{chen_modularity_2016,
+	title = {From modularity to emergence: a primer on the design and science of complex systems},
+	shorttitle = {From modularity to emergence},
+	abstract = {Electrical networks, flocking birds, transportation hubs, weather patterns, commercial organisations, swarming robots... Increasingly, many of the systems that we want to engineer or understand are said to be ‘complex’. These systems are often considered to be intractable because of their unpredictability, non-linearity, interconnectivity, heterarchy and ‘emergence’. Such attributes are often framed as a problem, but can also be exploited to encourage systems to efficiently exhibit intelligent, robust, self-organising behaviours. But what does it mean to describe systems as complex? How do these complex systems differ from the more easily understood ‘modular’ systems that we are familiar with? What are the underlying similarities between different systems, whether modular or complex? Answering these questions is a first step in approaching the design and science of complexity. However, to do so, it is necessary to look beyond the specifics of any particular system or field of study. We need to consider the fundamental nature of systems, looking for a common way to view ostensibly different phenomena. This primer introduces a domain-neutral framework and diagrammatic scheme for characterising the ways in which systems are modular or complex. Rather than seeing modularity and complexity as inherent attributes of systems, we instead see them as ways in which those systems are characterised by those who are interested in them. The framework is not tied to any established mode of representation (e.g. networks, equations, formal modelling languages) nor to any domain-specific terminology (e.g. ‘vertex’, ‘eigenvector’, ‘entropy’). Instead, it consists of basic system constructs and three fundamental attributes of modular system architecture, namely structural encapsulation, function-structure mapping and interfacing. These constructs and attributes encourage more precise descriptions of different aspects of complexity (e.g. emergence, self-organisation, heterarchy). This allows researchers and practitioners from different disciplines to share methods, theories and findings related to the design and study of different systems, even when those systems appear superficially dissimilar.},
+	language = {en},
+	institution = {Apollo - University of Cambridge Repository},
+	author = {Chen, Chih-Chun and Crilly, Nathan},
+	collaborator = {Apollo-University Of Cambridge Repository and Apollo-University Of Cambridge Repository},
+	month = sep,
+	year = {2016},
+	keywords = {complex systems, complexity, complexity science, design, engineering, interdisciplinary, modularity, systems, systems design}
+}
+
+@article{Bonath2007NeuralBO,
+  title={Neural Basis of the Ventriloquist Illusion},
+  author={Bjoern Bonath and Toemme Noesselt and Ant{\'i}gona Mart{\'i}nez and Jyoti Mishra and Kati Schwiecker and Hans-Jochen Heinze and Steven A. Hillyard},
+  journal={Current Biology},
+  year={2007}
+}
+
+@article{Reale1980TonotopicOI,
+  title={Tonotopic organization in auditory cortex of the cat},
+  author={Richard A. Reale and Thomas J. Imig},
+  journal={Journal of Comparative Neurology},
+  year={1980},
+  volume={192}
+}
