--- a/main.tex
+++ b/main.tex
@@ -49,9 +49,10 @@
 \dominitoc
 \include{titlepage}
 \tableofcontents
-\subfile{00-Introduction/source}
-\mainmatter
+%\subfile{00-Introduction/source}
 \subfile{01-Modularite/source}
+\mainmatter
+
 \subfile{02-Architectures/source}
 %Chapitre en plus : multimodalité ?
 \subfile{03-SOM/source}
