--- a/05-Indicateur/source.tex
+++ b/05-Indicateur/source.tex
@@ -1,3 +1,9 @@
+\documentclass[../main]{subfiles}
+\ifSubfilesClassLoaded{
+    \dominitoc
+    \tableofcontentsfile
+}{}
+\begin{document}
 \chapter{Information mutuelle normalisée comme indicateur de l'apprentissage des données multimodales\label{chap:indicateur}}
 \graphicspath{{05-Indicateur/}}
 \minitoc
@@ -252,6 +258,9 @@ Parallèlement à la définition de cet indicateur, nous avons étudié l'évolu
 Cette propriété reste à généraliser pour des distributions d'entrée différentes, comme les autres propriétés des cartes de CxSOM entrevues dans le chapitre précédent. La généralisation de toutes ces propriétés fera l'objet du chapitre suivant.
 Elle pose néanmoins une question concernant la création d'architectures contenant plus de cartes: jusqu'à quel point une carte peut-elle se permettre de perdre de l'information sur l'entrée externe pour gagner de l'information sur le modèle ? 
 
-
-
+\ifSubfilesClassLoaded{
+    \printbibliography
+    %\externaldocument{../main.tex}   
+}{}
+\end{document}
 
