--- a/01-Modularite/source.tex
+++ b/01-Modularite/source.tex
@@ -16,11 +16,11 @@
 \chapter*{Introduction}
 
 
-Le terme d’intelligence artificielle apparaît en 1956 lors d’une conférence donnée à l’université de Dartmouth, Dartmouth Summer Research Project on Artificial Intelligence. Cette conférence rassemble des chercheurs issus de différents domaines en plein essor de création comme la cybernétique, le traitement de l’information, la logique, la biologie, et veut poser les bases d’un nouveau domaine, nommé à cette occasion par les organisateurs Minsky et McCarthy: “Intelligence artificielle”. 
+Le terme d'intelligence artificielle apparaît en 1956 lors d'une conférence donnée à l'université de Dartmouth, Dartmouth Summer Research Project on Artificial Intelligence. Cette conférence rassemble des chercheurs issus de différents domaines en plein essor de création comme la cybernétique, le traitement de l'information, la logique, la biologie, et veut poser les bases d'un nouveau domaine, nommé à cette occasion par les organisateurs Minsky et McCarthy: “Intelligence artificielle”. 
 
-Ce terme générique est en fait large: on va appeler intelligence artificielle tout programme capable d’effectuer des tâches compliquées dont seuls les humains étaient initialement capables de résoudre. 
-En terme d’architectures, les programmes d’intelligence artificielle peuvent être des systèmes figés à base de logique tels que les systèmes experts, ou des systèmes évolutifs. Parmi les tâches dites humaines se trouve en effet la notion d’apprentissage. La création  d’un système apprenant à partir d’entrées devient alors un enjeu à part entière de l’intelligence artificielle qu’on nommera apprentissage automatique ou en anglais machine learning.
-Ces 60 dernières années ont alors vu les systèmes “intelligents” évoluer, se diversifier, pour résoudre de plus en plus de tâches jusqu’alors considérées comme humaines.
+Ce terme générique est en fait large: on va appeler intelligence artificielle tout programme capable d'effectuer des tâches compliquées dont seuls les humains étaient initialement capables de résoudre. 
+En terme d'architectures, les programmes d'intelligence artificielle peuvent être des systèmes figés à base de logique tels que les systèmes experts, ou des systèmes évolutifs. Parmi les tâches dites humaines se trouve en effet la notion d'apprentissage. La création  d'un système apprenant à partir d'entrées devient alors un enjeu à part entière de l'intelligence artificielle qu'on nommera apprentissage automatique ou en anglais machine learning.
+Ces 60 dernières années ont alors vu les systèmes “intelligents” évoluer, se diversifier, pour résoudre de plus en plus de tâches jusqu'alors considérées comme humaines.
 
 La conception de ces programmes passe par différentes sources d'inspirations, la biologie y prenant une place de premier choix.
 
@@ -76,10 +76,8 @@ La notion de systèmes complexe est étroitement liée à celle d'auto-organisat
 
 \subsection*{Emergence de calcul comme moyen de conception de nouveaux algo d'IA}
 
-D'un point de vue de création de systèmes, cela veut dire qu'on peut construire un système a partir d’éléments séparés, dont le comportement global résulte de l'interaction de ces éléments..
+D'un point de vue de création de systèmes, cela veut dire qu'on peut construire un système a partir d'éléments séparés, dont le comportement global résulte de l'interaction de ces éléments..
 Le deep learning a été construit a partir du perceptron comme un assemblage de couches, dans le but de ????
-
-
 
 \section*{ Plan de la thèse}
 
