--- a/01-Modularite/source.tex
+++ b/01-Modularite/source.tex
@@ -16,6 +16,39 @@
 \chapter*{Introduction}
 
 
+Système dynamiques complexes : 
+qu'est ce que c'est ?
+
+intérêt computationnel : réseaux booleens, automates cellulaires
+
+definition computation : calcul à l'aide d'un modèle unifié. Calcul = transformation d'entrée en sortie.
+
+Apprentissage : capacité pour un modèle de computation d'effectuer des calculs relatifs à l'ensemble des entrées vues précédemment et non seulement l'entrée courante. 
+
+Un système dynamique est un système qui réagit à des entrées courantes. Cependant, on peut penser à ajouter une composante d'apprentissage dans ces systèmes complexes. 
+Les réseaux de neurones impulsionnels sont ainsi des exemples de systèmes dynamiques implémentant des tâches d'apprentissage globales au réseau. Chaque neurone est régi par des équations de comportement non linéaires et ces neurones sont connectés entre eux.
+Chaque neurone est mis à jour lors de la phase d'apprentissage, par exemple dans le poids de ses connexions au autres neurones ou dans les délais d'impulsion. Par contre, la capacité computationnelle du réseau est collective: c'est la réponse globale du réseau à une entrée qui est traitée et considérée comme sortie du réseau et non la réponse d'un neurone seul. 
+
+Lorsqu'on s'intéresse à la capacité de calcul d'un système dynamique, on s'intéresse à son auto-organisation. 
+Les systèmes ordonnés sont décrit par une incertitude faible sur leur comportement, mais par conséquent portent moins d'information (entropy). Les systèmes dits désordonnés ont une incertitude grande sur leur comportement, mais portent plus d'information.
+Les états les moins fréquents portent plus d'information.
+Samaya : introduction to the modeling and analysing of complex systems donne ainsi la définition suivante:
+L'auto-organisation est l'augmentation d'un ordre dans un système dans le temps, sans intervention extérieure.
+L'émergence se définit comme l'apparition d'ordre sur une échelle plus grande. 
+Un élément du système complexe peut en effet avoir un résultat certain, mais la combinaison de tous les éléments apporte une incertitude sur le calcul global.
+L'appartition d'un ordre, de régularités, sur le comportement collectif traduit l'émergence de comportement. Ainsi la notion d'apprentissage dans un réseau de neurone impulsionnel est l'émergence d'un comportement.
+
+Nous nous intéressons spécialement aux comportements d'apprentissage, c'est à dire à des comportements relatifs à un ensemble de données d'entrées qui évolue au cours du temps. 
+
+
+Association de cartes auto-organisatrices:
+Les éléments d'un système dynamique complexe sont des éléments ayant une entrée, un état et une sortie défini. Leur état dépend des autres éléments du systèmes.
+Si on choisit de prendre comme élémént un système ayant déjà une capacité d'apprentissage et que nous le connectons à d'autres, quels seront les comportements résultants ?
+Nous nous intéressons à cette question spécifique. L'élaboration de nouveaux algoritmes de calculs passe en effet par la construction d'architectures pour lesquelles on s'attend à un nouveau comportement d'apprentissage.
+
+Nous avons choisi d'étudier les architectures de cartes auto-organisatrices de Kohonen. Ces cartes sont un ensemble de noeuds ordonnées, mis à jour lors d'un algorithme d'apprentissage. Ces structures montrent un apprentissage de régularité sur leur espace d'entrée. Ici leur entrée est donc l'espace d'entrée, leur état l'ensemble des activités et des poids régi par l'algorithme d'apprentissage.
+L'association de tels systèmes nous amènera ainsi à des comportements dynamiques.
+
 Le terme d'intelligence artificielle apparaît en 1956 lors d'une conférence donnée à l'université de Dartmouth, Dartmouth Summer Research Project on Artificial Intelligence. Cette conférence rassemble des chercheurs issus de différents domaines en plein essor de création comme la cybernétique, le traitement de l'information, la logique, la biologie, et veut poser les bases d'un nouveau domaine, nommé à cette occasion par les organisateurs Minsky et McCarthy: “Intelligence artificielle”. 
 
 Ce terme générique est en fait large: on va appeler intelligence artificielle tout programme capable d'effectuer des tâches compliquées dont seuls les humains étaient initialement capables de résoudre. 
